ring-checkbox__label_i align fix IE
Former-commit-id: dc8bcb25cdc6290d407307f68a85d537b6e85aa2

--- a/blocks/form/_form.scss
+++ b/blocks/form/_form.scss
@@ -480,6 +480,7 @@
 
 .ring-checkbox__label_i {
   vertical-align: middle;
+  vertical-align: top\9;
 }
 
 // Checkbox
